changement de limite url, correction de bug

--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
-
+/*----GENERAL----*/
 
 * {
     box-sizing: border-box;
 }
+
+.hidden {
+    display: none;
+}
+
+/*----BODY----*/
 
 body {
     margin: 0;
