--- a/style.css
+++ b/style.css
@@ -8,6 +8,13 @@
     display: none;
 }
 
+.pokeText {
+    font-family: 'Pokemon Solid', sans-serif;
+    font-weight: bold;
+    color: rgb(222, 222, 7);
+    -webkit-text-stroke: 2px blue;
+}
+
 /*----BODY----*/
 
 body {
@@ -23,11 +30,7 @@ body {
 }
 
 .header-title {
-    font-family: 'Pokemon Solid', sans-serif;
     font-size: 3rem;
-    font-weight: bold;
-    color: rgb(222, 222, 7);
-    -webkit-text-stroke: 2px blue;
 }
 
 .header-user {
@@ -38,6 +41,23 @@ body {
     align-items: center;
 }
 
+.menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-header {
+    font-size: 2rem;
+    text-align: center;
+    background-color: rgb(208, 5, 5);
+    border: 3px solid;
+    height: 4rem;
+    width: 10rem;
+    padding: 1rem;
+    margin: 1rem;
+}
+
 .user-icon {
     height: 2rem;
     width: 2rem;
@@ -46,14 +66,14 @@ body {
 }
 
 .card-container {
-    padding: 2rem;
+    padding: 2rem 2rem 0 2rem;
     display: flex;
     flex-wrap: wrap;
 }
 
 .card {
     padding: 0.5rem;
-    margin: 1rem;
+    margin: 2rem 1rem;
     padding: 0.8rem;
     width: calc(100% / 4 - 3rem);
     min-width: 10rem;
@@ -248,6 +268,21 @@ body {
     transition: all 1S ease;
     transform: perspective(200px) translate3d(-1rem, -2rem, 1rem);
     box-shadow: 10px 10px 10px rgba(69, 69, 69, 0.817);
+}
+
+/*----ARENA----*/
+
+.arenaContainer {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+.canvas {
+    position: relative;
+    width: calc(100% /1.5);
+    height: calc(100% / 1.5);
+    border: 1px solid black;
 }
 
 @keyframes identifier {
